pushing design changes to repo...

--- a/test.html
+++ b/test.html
@@ -226,7 +226,7 @@
 
                             <span class="badge badge-dark mb-2 trebuchet">Nov 2017 - Present</span>
                             <h3 class="trebuchet h3-resume">Full Stack Developer | Triad Behavioral Health</h3>
-                            <p class="calibri">During my tenure with the company I have completed a multitude of projects using HTML5, CSS, Bootstrap 3/4, JavaScript, jQuery, Laravel, VBScript, C#, Git, AWS, Docker, and SQL.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met deadlines.  The projects I have completed on my own or as a collaborative effort have had a noticeably positive effect on revenue.</p>
+                            <p class="calibri">During my tenure with the company I have completed a multitude of projects using AWS, Bootstrap 3/4, C#, CSS3, Docker, Git, HTML5, JavaScript, jQuery, Laravel, SQL, and VB Script.  I have maintained an exceptional level of customer service while collaborating with team members on project requirements, involving both front-end & back-end development and have successfully met deadlines.  The projects I have completed on my own or as a collaborative effort have had a noticeably positive effect on revenue.</p>
                             <hr/>
 
                             <span class="badge badge-dark mb-2 trebuchet">2012 - Present</span>
@@ -362,14 +362,36 @@
                 <table class="table calibri">
 
                     <tbody>
+
                     <tr class="d-flex">
-                        <td class="col-6">HTML5/CSS</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                        <td class="col-6">Aptitude to Learn Unlisted Skill</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:98%;"></div></div></td>
+                    </tr>
+
+
+                    <tr class="d-flex">
+                        <td class="col-6">ASP.NET MVC</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
                         <td class="col-6">Bootstrap 3/4</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">C#</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:83%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">HTML5/CSS3</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Java</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
@@ -382,25 +404,9 @@
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
                     </tr>
 
-
                     <tr class="d-flex">
-                        <td class="col-6">Responsive Design</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">C#</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">Visual Basic</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">ASP.NET MVC</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        <td class="col-6">Laravel</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
@@ -408,11 +414,11 @@
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
                     </tr>
 
-                    <tr class="d-flex">
-                        <td class="col-6">Laravel</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
-                    </tr>
 
+                    <tr class="d-flex">
+                        <td class="col-6">Responsive Design</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                    </tr>
 
                     <tr class="d-flex">
                         <td class="col-6">Ruby</td>
@@ -425,24 +431,21 @@
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
                     </tr>
 
+
                     <tr class="d-flex">
                         <td class="col-6">SQL</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:85%;"></div></div></td>
                     </tr>
 
+
                     <tr class="d-flex">
-                        <td class="col-6">Java</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
+                        <td class="col-6">Visual Basic</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
                         <td class="col-6">Wordpress</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">Aptitude to Learn Unlisted Skill</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:98%;"></div></div></td>
                     </tr>
 
                     </tbody>
@@ -483,25 +486,10 @@
                 <table class="table calibri">
 
                     <tbody>
-                    <tr class="d-flex">
-                        <td class="col-6">Microsoft Office</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
-                    </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">Git/Github</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
-                    </tr>
-
-
-                    <tr class="d-flex">
-                        <td class="col-6">Visual Studio</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">JetBrains IDE's</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                        <td class="col-6">Adobe Flash</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
@@ -510,8 +498,18 @@
                     </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">SQL Server</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        <td class="col-6">Git/Github</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">JetBrains IDE's</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Microsoft Office</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
@@ -524,17 +522,31 @@
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
                     </tr>
 
+                    <tr class="d-flex">
+                        <td class="col-6">SQL Server</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                    </tr>
 
                     <tr class="d-flex">
                         <td class="col-6">Tableau</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
                     </tr>
 
+                    <tr class="d-flex">
+                        <td class="col-6">Tower</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                    </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">Adobe Flash</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:70%;"></div></div></td>
+                        <td class="col-6">Visual Studio</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
                     </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">VS Code</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                    </tr>
+
 
                     </tbody>
                 </table>
@@ -545,7 +557,11 @@
                     <tbody>
 
                     <tr class="d-flex">
-                        <td class="col-6">Windows</td>
+                        <td class="col-6">Android</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
+                    </tr>
+                    <tr class="d-flex">
+                        <td class="col-6">iOS</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
                     </tr>
 
@@ -555,14 +571,10 @@
                     </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">Android</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:90%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">iOS</td>
+                        <td class="col-6">Windows</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
                     </tr>
+
 
                     </tbody>
 
@@ -572,8 +584,14 @@
                 <table class="table calibri">
 
                     <tbody>
+
                     <tr class="d-flex">
-                        <td class="col-6">Responsible</td>
+                        <td class="col-6">Ability to Meet Deadlines</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Attention to Detail</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
                     </tr>
 
@@ -583,41 +601,46 @@
                     </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">Ability to Meet Deadlines</td>
+                        <td class="col-6">Customer Service</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
                         <td class="col-6">Learning New Skills</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
                     </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Management Experience</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:80%;"></div></div></td>
+                    </tr>
+
                     <tr class="d-flex">
                         <td class="col-6">Organization</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:98%;"></div></div></td>
                     </tr>
 
                     <tr class="d-flex">
-                        <td class="col-6">Typing (90+ WPM)</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">Customer Service</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
-                    </tr>
-
-                    <tr class="d-flex">
-                        <td class="col-6">Attention to Detail</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
-                    </tr>
-                    <tr class="d-flex">
                         <td class="col-6">Phone Etiquette</td>
                         <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:95%;"></div></div></td>
                     </tr>
+
+
                     <tr class="d-flex">
-                        <td class="col-6">Management Experience</td>
-                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:75%;"></div></div></td>
+                        <td class="col-6">Responsible</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
                     </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Team work</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:100%;"></div></div></td>
+                    </tr>
+
+                    <tr class="d-flex">
+                        <td class="col-6">Typing <br/>(90+ WPM)</td>
+                        <td class="col-6"><div class="rating"><div class="stars"></div><div class="back" style="width:99%;"></div></div></td>
+                    </tr>
+
 
                     </tbody>
                 </table>
