pushing design changes to repo...

--- a/test.html
+++ b/test.html
@@ -144,6 +144,24 @@
             border: 2px solid #000000;
         }
 
+
+
+        /*portfolio styles*/
+
+        a.port-links{
+
+            color: #000000;
+
+        }
+
+        a.port-links:hover{
+            color:#000000;
+        }
+
+        a.port-links:visited{
+            color:#000000;
+        }
+
         /*media queries*/
 
         /*max hide tab text */
@@ -795,7 +813,7 @@
 
                     </div>
 
-                    <h6 class="trebuchet">Custom Bootstrap 4 Theme/Laravel Site<br/>TriadBehavioralHealth.com</h6>
+                    <h6 class="trebuchet">Custom Bootstrap 4 Theme/Laravel Site<br/><a href="https://www.triadbehavioralhealth.com" class="port-links" target="_blank">TriadBehavioralHealth.com</a></h6>
                     <a href="#demo11" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo11" class="collapse calibri">
                         <br/>
@@ -1056,7 +1074,7 @@
 
 
                     </div>
-                    <h6 class="trebuchet">HTML5/CSS/jQuery</h6>
+                    <h6 class="trebuchet">HTML5/CSS/jQuery<br/><a href="https://thisdudecodes.com/lilac-dogs" class="port-links" target="_blank">Lilac Dogs (Archived Site)</a></h6>
                     <a href="#demo6" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo6" class="collapse calibri">
                         <br/>
@@ -1095,7 +1113,7 @@
                         </figure>
 
                     </div>
-                    <h6 class="trebuchet">Single Page jQuery Mobile</h6>
+                    <h6 class="trebuchet">Single Page jQuery Mobile<br/><a href="https://checkenginefree.com" target="_blank" class="port-links">CheckEngineFree.com</a></h6>
                     <a href="#demo7" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo7" class="collapse calibri">
                         <br/>
@@ -1128,7 +1146,7 @@
                         </figure>
 
                     </div>
-                    <h6 class="trebuchet">Custom Tumblr Theme</h6>
+                    <h6 class="trebuchet">Custom Tumblr Theme<br/><a href="http://www.amhodgson.com" target="_blank" class="port-links">AMHodgson.com</a></h6>
                     <a href="#demo8" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo8" class="collapse calibri">
                         <br/>
@@ -1140,37 +1158,6 @@
 
                 </div>
 
-                <div class="col-sm-12 mt-5 col-md-6">
-
-                    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="images/ASP-mvc-albums-CRUD.png" itemprop="contentUrl" data-size="1024x1024">
-                                <img src="images/ASP-mvc-albums-CRUD-thumb.png" itemprop="thumbnail" alt="CRUD MVC ASP" />
-                            </a>
-                            <figcaption itemprop="caption description">MVC ASP CRUD</figcaption>
-                        </figure>
-                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="images/MVC-ASP-CRUD-with-image-upload.png" itemprop="contentUrl" data-size="1323x784">
-                                <img src="images/MVC-ASP-CRUD-with-image-upload.png" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                            <figcaption itemprop="caption description">MVC ASP Create view with image upload</figcaption>
-                        </figure>
-
-                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                            <a href="images/social-logins-oauth-mvc-asp.png" itemprop="contentUrl" data-size="1323x784">
-                                <img src="images/social-logins-oauth-mvc-asp.png" itemprop="thumbnail" alt="Image description" />
-                            </a>
-                            <figcaption itemprop="caption description">Social media OAuth2 login links<br/> I have test accounts working with all providers listed</figcaption>
-                        </figure>
-
-                    </div>
-                    <h6 class="trebuchet">ASP.NET MVC</h6>
-                    <a href="#demo9" class="btn btn-dark" data-toggle="collapse">More Info</a>
-                    <div id="demo9" class="collapse calibri">
-                        <br/>
-                        <p>Since I am familiar with Rails and MVC I decided to learn ASP.NET MVC when not busy studying.  Here is some idea of what I can do with that technology.  Unfortunately,  I do not currently have a neatly designed page as I have mostly been focusing on learning the backend of this technology.  There are also other things that I have figured out with this technology like pagination of records- - for example, but I do not have a photo at this time only code.  I also do not have a live version of this site but if requested I can provide examples of my code!  It has been a cool experience learning ASP MVC because I have found that I am able to learn MVC frameworks fairly easily and am excited to learn more!</p></div>
-                </div>
 
 
                 <div class="col-sm-12 mt-5 col-md-6">
@@ -1230,19 +1217,47 @@
                         </figure>
 
 
-
-
                     </div>
-                    <h6 class="trebuchet">Laravel  Framework</h6>
+                    <h6 class="trebuchet">Learning the Laravel  Framework 2015<br/><a href="https://trailblazersfans.com" class="port-links" target="_blank">TrailBlazersFans.com</a></h6>
                     <a href="#demo10" class="btn btn-dark" data-toggle="collapse">More Info</a>
                     <div id="demo10" class="collapse calibri">
                         <br/>
-                        <p>Since I am familiar with Rails and MVC I also decided to learn Laravel MVC in my free time.  Here is a recent example of what I can do while working with this technology in combination with styling.  Currently, I have a live version of this site at: <a href="https://trailblazersfans.com" target="_blank">https://trailblazersfans.com</a>.  The site is definitely a demo, and work still remains to be done.  It has been a fun and rewarding experience learning Laravel because I have found I am able to learn MVC frameworks fairly easily and am excited to learn many more during my career or as my personal time allows!</p></div>
+                        <p>Since I became familiar with Rails and MVC during school I had been reading about other similar MVC frameworks and decided to learn Laravel in 2015 during my free time outside of class.  I was very happy I did because it is steadily becoming a favorite in my skillset.  Here is a recent example of what I can do while working with this technology in combination with styling.  Currently, I have a live version of this site at: <a href="https://trailblazersfans.com" target="_blank">https://trailblazersfans.com</a>.  The site is definitely a demo, and work still remains to be done.  It has been a fun and rewarding experience learning Laravel because I have found I am able to learn MVC frameworks fairly easily and am excited to learn many more during my career or as my personal time allows!</p></div>
                 </div>
 
 
 
+                <div class="col-sm-12 mt-5 col-md-6">
 
+                    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
+                        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/ASP-mvc-albums-CRUD.png" itemprop="contentUrl" data-size="1024x1024">
+                                <img src="images/ASP-mvc-albums-CRUD-thumb.png" itemprop="thumbnail" alt="CRUD MVC ASP" />
+                            </a>
+                            <figcaption itemprop="caption description">MVC ASP CRUD</figcaption>
+                        </figure>
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/MVC-ASP-CRUD-with-image-upload.png" itemprop="contentUrl" data-size="1323x784">
+                                <img src="images/MVC-ASP-CRUD-with-image-upload.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">MVC ASP Create view with image upload</figcaption>
+                        </figure>
+
+                        <figure style="display:none;" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <a href="images/social-logins-oauth-mvc-asp.png" itemprop="contentUrl" data-size="1323x784">
+                                <img src="images/social-logins-oauth-mvc-asp.png" itemprop="thumbnail" alt="Image description" />
+                            </a>
+                            <figcaption itemprop="caption description">Social media OAuth2 login links<br/> I have test accounts working with all providers listed</figcaption>
+                        </figure>
+
+                    </div>
+                    <h6 class="trebuchet">ASP.NET MVC</h6>
+                    <a href="#demo9" class="btn btn-dark" data-toggle="collapse">More Info</a>
+                    <div id="demo9" class="collapse calibri">
+                        <br/>
+                        <p>Since I became familiar with Rails and the concept of MVC during school, I decided to learn ASP.NET MVC at the same time, while not busy studying.  Here is some idea of what I can do with that technology in a short amount of time.  Unfortunately,  I do not currently have a neatly designed page as I have mostly been focusing on learning the backend of this technology.  There are also other things (not pictured) that I have figured out with this technology like pagination of records- - for example, but I do not have a photo at this time only the code itself.  I also do not have a live version of this site but if requested I can provide examples of said code!  It has been a cool experience learning ASP.NET MVC because I have found that I am able to learn it and other MVC frameworks fairly easily and am excited about the prospect of learning more as time allows!</p></div>
+                </div>
 
 
             </div>
